treatment page optimizations

--- a/src/treatment/index.v.html
+++ b/src/treatment/index.v.html
@@ -35,7 +35,7 @@
                 <p>At Flatirons Recovery, clients will engage in a weekly, 1-hour individual therapy session in order
                     to develop more insight into the habitual patterns that have influenced their substance use disorder.
                 </p>
-                <a href="/treatment/therapy" class="button border">Learn More</a>
+                <a href="/treatment/therapy" class="button border">Learn More - Therapy</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
@@ -43,7 +43,7 @@
                 <h3>Day Treatment</h3>
                 <p>Addiction treatment at Flatirons Recovery typically begins in our Day Treatment, or PHP program, which
                     meets Monday through Friday, from 8:30am – 3:00pm.</p>
-                <a href="/treatment/php" class="button border">Learn More</a>
+                <a href="/treatment/php" class="button border">Learn More - PHP</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
@@ -51,14 +51,14 @@
                 <h3>Intensive Outpatient</h3>
                 <p>At Flatirons Recovery, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am -
                     12pm for group therapy.</p>
-                <a href="/treatment/iop" class="button border">Learn More</a>
+                <a href="/treatment/iop" class="button border">Learn More - IOP</a>
             </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="blue tile">
                 <h3>Theraputic Modalities</h3>
                 <p>Cognitive Behavioral Therapy, Biofeedback, Dialectical Behavioral Therapy are just some of the theraputic modalities utilized by Flatirons Recovery.</p>
-                <a href="/treatment/modalities" class="button border">Learn More</a>
+                <a href="/treatment/modalities" class="button border">Learn More - Modalities</a>
             </div>
         </div>
     </div>
@@ -68,12 +68,12 @@
             <h3>Support Groups for Family Members</h3>
             <p>Flatirons Recovery highly recommends that family members support themselves while their loved one is in treatment. The following in a small sampling of the community supports that may be appropriate and/or available in your community.</p>
             <ul>
-                <li><a href="https://www.smartrecovery.org/family-friends-and-addiction-recovery/" target="_blank">SMART Recovery Family and Friends</a></li>
-                <li><a href="https://www.nami.org/Home" target="_blank">NAMI</a></li>
-                <li><a href="https://al-anon.org/" target="_blank">Al-Anon</a></li>
-                <li><a href="https://al-anon.org/newcomers/teen-corner-alateen/" target="_blank">Alateen</a></li>
-                <li><a href="http://grasphelp.org/" target="_blank">GRASP</a></li>
-                <li><a href="https://www.familiesanonymous.org/" target="_blank">Families Anonymous</a></li>
+                <li><a href="https://www.smartrecovery.org/family-friends-and-addiction-recovery/" target="_blank" rel="noopener">SMART Recovery Family and Friends</a></li>
+                <li><a href="https://www.nami.org/Home" target="_blank" rel="noopener">NAMI</a></li>
+                <li><a href="https://al-anon.org/" target="_blank" rel="noopener">Al-Anon</a></li>
+                <li><a href="https://al-anon.org/newcomers/teen-corner-alateen/" target="_blank" rel="noopener">Alateen</a></li>
+                <li><a href="http://grasphelp.org/" target="_blank" rel="noopener">GRASP</a></li>
+                <li><a href="https://www.familiesanonymous.org/" target="_blank" rel="noopener">Families Anonymous</a></li>
             </ul>
         </div>
     </div>
