updated markup for tagmanager

--- a/landing/alcohol-landing/index.v.html
+++ b/landing/alcohol-landing/index.v.html
@@ -9,6 +9,7 @@
     .main {
         background-image: url('/alcohol-landing/flatirons-hill.jpg');
     }
+
     .ps {
         font-size: 1rem;
         line-height: 1.6rem;
@@ -16,6 +17,7 @@
         padding: 0.5rem;
         font-weight: 500;
     }
+
     .button {
         margin: 0.5rem;
     }
@@ -63,7 +65,7 @@
             </div>
             <div class="col-xs-12 col-sm">
                 <h3>By phone:</h3>
-                <a class="button yellow" href="tel:303-578-4536" data-track="click: phone, click">Call Now: 303-578-4536</a>
+                <a class="button yellow" href="tel:303-578-4536">Call Now: 303-578-4536</a>
                 <h3>By online form:</h3>
                 <a class="button yellow" href="/admission#verify-insurance">verify your insurance</a>
                 <div class="ps">*All information submitted to us is completely confidential. See our HIPPA Confidentiality Policy.</div>
@@ -125,7 +127,7 @@
             </div>
             <div class="row">
                 <a class="button border" href="/sober-living">Sober Living</a>
-                <a class="button yellow" href="tel:303-578-4536" data-track="click: phone, click">Call Now: 303-578-4536</a>
+                <a class="button yellow" href="tel:303-578-4536">Call Now: 303-578-4536</a>
             </div>
         </div>
     </div>
@@ -142,4 +144,3 @@
         window.erbium.gallery.create({ target: gallery });
     });
 </script>
-
