--- a/src/addiction/index.v.html
+++ b/src/addiction/index.v.html
@@ -22,7 +22,7 @@
 <div class="wrap">
     <h2><a href="/addiction/alcohol">Alcohol Addiction</a></h2>
     <p>The most frequently misused substance in the United States is alcohol. Currently referred to in the professional literature as Alcohol Use Disorder, though more frequently referred to by the term Alcoholism, according to the National Institute on Alcohol and Alcoholism (NIAAA) its misuse impacts as 14.4 million adults ages 18 and older, including 9.2 million men (7.6 percent of men in this age group) and 5.3 million women (4.1 percent of women in this age group).</p>
-    <p>Due primarily to the fact that alcohol is legal, though also influenced by the cultural saturation of alcohol consumption, many believe that the impact of alcohol use relative to other drugs is benign. However, the NIAAA reports that “an estimated 88,0005 people (approximately 62,000 men and 26,000 women) die from alcohol-related causes annually, making alcohol the third leading preventable cause of death in the United States.” Further, a landmark study in 2019 from researchers in Australia concluded that—after accounting for a number of factors, including damage they caused to users (including illness, injury and death), and the effects drugs have on users' families and the wider community, such as through  violence, crime, unemployment, economic costs and relationship breakdowns—alcohol misuse caused the most pervasive community-wide damage, ahead of methamphetamine, heroin, fentanyl, and cocaine.</p>
+    <p>Due primarily to the fact that alcohol is legal, though also influenced by the cultural saturation of alcohol consumption, many believe that the impact of alcohol use relative to other drugs is benign. However, the NIAAA reports that “an estimated 88,0005 people (approximately 62,000 men and 26,000 women) die from alcohol-related causes annually, making alcohol the third leading preventable cause of death in the United States.” Further, a landmark study in 2019 from researchers in Australia concluded that—after accounting for a number of factors, including damage they caused to users (including illness, injury and death), and the effects drugs have on users' families and the wider community, such as through violence, crime, unemployment, economic costs and relationship breakdowns—alcohol misuse caused the most pervasive community-wide damage, ahead of methamphetamine, heroin, fentanyl, and cocaine.</p>
 
     <h4>How to tell if you or a loved one is using alcohol problematically?</h4>
     <p>The following criteria come from the current Diagnostic and Statistical Manual (DSM) released by the American Psychiatric Association in 2013:</p>
@@ -58,10 +58,10 @@
                 <h4>If you or a loved one’s <a href="/addiction/alcohol">alcohol</a> use meet at least <strong>two of these criteria</strong> in the past 12 months, then you may be suffering from a substance use disorder requiring treatment.</h4>
             </div>
         </div>
-        
+
         <div class="row center-xs">
             <a class="button border" href="/admission">Admission Process</a>
-            <a class="button white" href="tel:303-578-4536" data-track="click: phone, click">CALL Now</a>
+            <a class="button white" href="tel:303-578-4536">CALL Now</a>
         </div>
     </div>
 </div>
@@ -81,7 +81,7 @@
             <li>A great deal of time is spent in activities, necessary to obtain alcohol, use heroin, or recover from its effects.</li>
             <li>Craving or a strong desire or urge to use heroin.</li>
             <li>Recurrent heroin use resulting in a failure to fulfill major role obligations at work, school or home.</li>
-            <li>Continued heroin use despite having persistent or recurrent social or interpersonal problems caused or exacerbated by the effects of alcohol.</li>    
+            <li>Continued heroin use despite having persistent or recurrent social or interpersonal problems caused or exacerbated by the effects of alcohol.</li>
         </div>
         <div class="col-xs-12 col-sm-6">
             <li>Recurrent heroin use in situations in which it is physically hazardous.</li>
@@ -90,7 +90,7 @@
             <li>High tolerance for heroin use.</li>
             <li>Withdrawal symptoms experienced without using heroin.</li>
         </div>
-    </ul>  
+    </ul>
 
     <h3>Heroin Treatment at Flatirons Recovery</h3>
     <p>Those wishing to engage in treatment for Heroin Use Disorder at Flatirons Recovery will typically engage in a medical detoxification program for a clinically determined period of 2-7 days to ensure that a client is medically stable.</p>
@@ -109,7 +109,7 @@
 
         <div class="row center-xs">
             <a class="button border" href="/admission">Admission Process</a>
-            <a class="button white" href="tel:303-578-4536" data-track="click: phone, click">CALL Now</a>
+            <a class="button white" href="tel:303-578-4536">CALL Now</a>
         </div>
     </div>
 </div>
@@ -135,7 +135,7 @@
             <li>Cocaine use is continued despite knowledge of having persistent or recurrent physical or psychological problems likely to have been caused or exacerbated by cocaine.</li>
             <li>Physical or psychological issues that are likely to have been caused or exacerbated by cocaine use.</li>
             <li>High tolerance for cocaine use.</li>
-            <li>Withdrawal symptoms experienced without using cocaine.</li>            
+            <li>Withdrawal symptoms experienced without using cocaine.</li>
         </div>
     </ul>
 
@@ -155,7 +155,7 @@
         </div>
         <div class="row center-xs">
             <a class="button border" href="/admission">Admission Process</a>
-            <a class="button white" href="tel:303-578-4536" data-track="click: phone, click">CALL Now</a>
+            <a class="button white" href="tel:303-578-4536">CALL Now</a>
         </div>
     </div>
 </div>
@@ -202,7 +202,7 @@
         </div>
         <div class="row center-xs">
             <a class="button border" href="/admission">Admission Process</a>
-            <a class="button white" href="tel:303-578-4536" data-track="click: phone, click">CALL Now</a>
+            <a class="button white" href="tel:303-578-4536">CALL Now</a>
         </div>
     </div>
 </div>
@@ -211,7 +211,7 @@
     <h2><a href="/addiction/methamphetamine">Methamphetamine Addiction</a></h2>
     <p>Meth has entered into the public consciousness in new ways recently though popular television shows such as Breaking Bad, however in reality meth has been impacting communities across the United State for decades.</p>
     <p>Among adults aged 26 or older in 2018, the <a href="https://www.samhsa.gov/data/sites/default/files/cbhsq-reports/NSDUHNationalFindingsReport2018/NSDUHNationalFindingsReport2018.pdf" target="_blank">National Survey on Drug Use and Health</a> found that 0.7 percent were past year methamphetamine users. This percentage represents 1.6 million adults in the United States who used methamphetamine in the past year, which was higher than the percentages in 2016 and 2017, but similar to the percentage in 2015.</p>
-    <p>However,  it is important to note the degree to which these numbers appear to mask regional variability. While methamphetamine use across the United States as a whole has stayed relatively steady over the past 5 years, the highest impact is in the western and midwestern regions of the US; more than 70 percent of local law enforcement agencies from the pacific and west central regions of the US report methamphetamine as the greatest drug threat in their area.</p>
+    <p>However, it is important to note the degree to which these numbers appear to mask regional variability. While methamphetamine use across the United States as a whole has stayed relatively steady over the past 5 years, the highest impact is in the western and midwestern regions of the US; more than 70 percent of local law enforcement agencies from the pacific and west central regions of the US report methamphetamine as the greatest drug threat in their area.</p>
     <p>Further, the National Institute on Drug Abuse’s National Drug Early Warning System (NDEWS) found <em>“that treatment admissions for methamphetamine as the primary substance of use were less than one percent in sites east of the Mississippi River, but ranged from 12-29 percent in the sites west of the Mississippi. Nationwide, overdose deaths from the category of drugs that includes methamphetamine increased by 7.5 times between 2007 and 2017.”</em></p>
 
     <h4>How to tell if you or a loved one is using meth problematically?</h4>
@@ -237,7 +237,7 @@
     <h3>Methamphetamine Treatment at Flatirons Recovery</h3>
     <p>Those wishing to engage in treatment for Methamphetamine Use Disorder at Flatirons Recovery will typically engage in a medical detoxification program for a clinically determined period of 2-7 days to ensure that a client is medically stable.</p>
     <p>Post-detox, treatment for Methamphetamine Use Disorder at Flatirons Recovery typically begins in our PHP/Day Treatment program for a period of at least 4 weeks, the details of which can be found here.</p>
-    <p>From there, clients often step-down into our IOP for a period of 4-12 weeks, while continuing to work with their therapeutic team on a plan to address support needs that will be crucial to maintaining recovery after structured treatment ends.</p>    
+    <p>From there, clients often step-down into our IOP for a period of 4-12 weeks, while continuing to work with their therapeutic team on a plan to address support needs that will be crucial to maintaining recovery after structured treatment ends.</p>
 </div>
 
 <div class="blue">
@@ -251,7 +251,7 @@
 
         <div class="row center-xs">
             <a class="button border" href="/admission">Admission Process</a>
-            <a class="button white" href="tel:303-578-4536" data-track="click: phone, click">CALL Now</a>
+            <a class="button white" href="tel:303-578-4536">CALL Now</a>
         </div>
     </div>
 </div>
@@ -287,7 +287,7 @@
             <li>Withdrawal symptoms experienced without using prescription medications.</li>
         </div>
     </ul>
-    
+
     <h3>Prescription Medication Treatment at Flatirons Recovery</h3>
     <p>Those wishing to engage in treatment for any kind of prescription medication use disorder at Flatirons Recovery
         will typically engage in a medical detoxification program for a clinically determined period of 2-7 days to
@@ -312,8 +312,7 @@
 
         <div class="row center-xs">
             <a class="button border" href="/admission">Admission Process</a>
-            <a class="button white" href="tel:303-578-4536" data-track="click: phone, click">CALL Now</a>
+            <a class="button white" href="tel:303-578-4536">CALL Now</a>
         </div>
     </div>
 </div>
-
