--- a/src/admission/index.v.html
+++ b/src/admission/index.v.html
@@ -61,7 +61,7 @@
 <div class="wrap" id="verify-insurance">
     <h2>Verify Insurance</h2>
     <h4>Complete form below to verify insurance benefits.</h4>
-    <form data-track="submit: insurance-form, submit">
+    <form>
         <field>
             <legend>Contact</legend>
             <div class="row">
