--- a/src/contact/index.v.html
+++ b/src/contact/index.v.html
@@ -24,10 +24,9 @@
     <div class="col-xs-12 col-sm-4 col-md-3">
         <h3>Contact Information:</h3>
         <hr>
-        <p><strong>Phone:</strong><br /> <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a>
+        <p><strong>Phone:</strong><br /> <a href="tel:303-578-4536">303-578-4536</a>
         </p>
-        <p><strong>Email:</strong><br /> <a
-                href="mailto:contact@flatironsrecovery.com">contact@flatironsrecovery.com</a></p>
+        <p><strong>Email:</strong><br /> <a href="mailto:contact@flatironsrecovery.com">contact@flatironsrecovery.com</a></p>
         <p><strong>Address:</strong><br /> <a href="https://goo.gl/maps/qw276Tekaxk3NL3e6" target="_blank">2770 Dagny
                 Way Suite 202 Lafayette, CO 80026</a></p>
         <p>Whether you're ready to begin your recovery, or you just want to learn more, please reach out today!</p>
@@ -35,7 +34,7 @@
     <div class="col-xs-12 col-sm-8 col-md-9">
         <!-- { "partial": "/partials/message-us.p.html" } -->
 
-        <form class="row" data-track="submit: contact-form, submit">
+        <form class="row">
             <!-- <div class="col-xs-12">
                 <h3>send us a message</h3>
             </div> -->
