--- a/src/index.v.html
+++ b/src/index.v.html
@@ -9,9 +9,11 @@
     .gradient .button {
         margin: 0.2rem;
     }
+
     .gradient h1 {
         text-transform: none;
     }
+
     .cover {
         /* background-image: url("/assets/images/cover.svg"); */
         background-image: url("/assets/images/cover.jpg");
@@ -52,10 +54,8 @@
                         from <a href="/addiction">drug and alcohol addiction</a> with greater clarity of purpose,
                         connection to community, and ability to take right action in their lives.</p>
                     <h3>Why Us?</h3>
-                    <p>What differentiates Flatirons Recovery from other addiction treatment providers is our <a
-                            href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes,
-                        and belief that all our clients are <a
-                            href="/blog/we-arent-here-to-fix-you-because-youre-not-broken/">innately good</a>, and must
+                    <p>What differentiates Flatirons Recovery from other addiction treatment providers is our <a href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes,
+                        and belief that all our clients are <a href="/blog/we-arent-here-to-fix-you-because-youre-not-broken/">innately good</a>, and must
                         be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care
                         that meets clients as they are, in order to guide them through the process of healing from a
                         wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
@@ -74,8 +74,7 @@
 </div>
 
 <div class="row">
-    <div class="col-xs-12 col-sm half-bg"
-        style="background-image: url('/assets/images/mountain-river.jpg'); background-position: center;"></div>
+    <div class="col-xs-12 col-sm half-bg" style="background-image: url('/assets/images/mountain-river.jpg'); background-position: center;"></div>
     <div class="col-xs-12 col-sm">
         <div class="wrap">
             <div class="row">
@@ -122,7 +121,7 @@
                 <h3>Addiction Treatment</h3>
                 <p>Flatirons Recovery’s addiction treatment program helps clients suffering from a wide range of
                     addictions begin to heal and recover. Our individualized, mindfulness-influenced <a href="/addiction">addictions
-                    treatment</a> focuses on building relapse prevention skills, healing trauma and other mental health
+                        treatment</a> focuses on building relapse prevention skills, healing trauma and other mental health
                     disorders, developing healthier eating and exercise habits, as well as connecting to supportive
                     communities for recovery.</p>
                 <a class="button border" href="/addiction">Learn More - Addictions</a>
@@ -132,7 +131,7 @@
 </div>
 
 <div class="wrap" id="message">
-    <form class="row" data-track="submit: contact-form, submit">
+    <form class="row">
         <div class="col-xs-12">
             <!-- { "partial": "/partials/message-us.p.html" } -->
         </div>
