--- a/landing/layout.l.html
+++ b/landing/layout.l.html
@@ -49,9 +49,6 @@
     <meta name="msapplication-TileColor" content="#2e86ab">
     <meta name="theme-color" content="#2e86ab">
 
-    <!-- <script>window.AID = 'UA-178025796-1';</script> -->
-    <!-- <script src="/assets/analytic.min.js" async></script> -->
-
     <script src="/assets/nav-bar.min.js" defer></script>
 
     <link rel="stylesheet" rel="preload" href="/assets/flexboxgrid.min.css">
@@ -82,7 +79,7 @@
                 </a>
             </div>
             <div class="col-xs-6 end-xs">
-                <a class="phone" href="tel:303-578-4536" data-track="click: phone, click" aria-label="Call">
+                <a class="phone" href="tel:303-578-4536" aria-label="Call">
                     <svg xmlns="http://www.w3.org/2000/svg" version="1.1">
                         <mask id="mask">
                             <rect width="100%" height="100%" fill="white" />
@@ -136,17 +133,17 @@
                 <br>
                 <h3>Find</h3>
                 <br>
-                <a href="https://goo.gl/maps/qw276Tekaxk3NL3e6" target="_blank" rel="noopener" data-track="click: address, click">2770 Dagny Way Suite 202 <br><br> Lafayette, CO 80026</a>
+                <a href="https://goo.gl/maps/qw276Tekaxk3NL3e6" target="_blank" rel="noopener">2770 Dagny Way Suite 202 <br><br> Lafayette, CO 80026</a>
             </div>
             <div class="col-xs-12 col-sm-4">
                 <br>
                 <br>
                 <h3>Contact</h3>
                 <br>
-                <a href="tel:303-578-4536" data-track="click: phone, click">303-578-4536</a>
+                <a href="tel:303-578-4536">303-578-4536</a>
                 <br>
                 <br>
-                <a href="mailto:contact@flatironsrecovery.com" data-track="click: email, click">contact@flatironsrecovery.com</a>
+                <a href="mailto:contact@flatironsrecovery.com">contact@flatironsrecovery.com</a>
             </div>
         </div>
         <div class="row center-xs bottom-xs">
@@ -166,9 +163,9 @@
 
     <button class="share" hidden>Share</button>
 
-    <a class="call" href="tel:303-578-4536" data-track="click: phone, click">Call</a>
+    <a class="call" href="tel:303-578-4536">Call</a>
 
-    <script src="https://cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script>
+    <!-- <script src="https://cdn.callrail.com/companies/637562366/f6d029256f703e62f7b0/12/swap.js"></script> -->
 
 </body>
 
