--- a/src/index.v.html
+++ b/src/index.v.html
@@ -60,9 +60,12 @@
                         that meets clients as they are, in order to guide them through the process of healing from a
                         wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
                 </div>
-            </div>
-            <div class="row center-xs">
-                <a class="button border" href="/about">Learn More</a>
+                <div class="col-xs-12 col-lg-9">
+                    <iframe id="player" frameborder="0" allowfullscreen="1"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" height="300"
+                        src="https://www.youtube.com/embed/-gf96cw_JOc?controls=0"></iframe>
+                        <a class="button border" href="/about">Learn More</a>
+                </div>
             </div>
         </div>
     </div>
