--- a/landing/alcohol-landing/index.v.html
+++ b/landing/alcohol-landing/index.v.html
@@ -107,7 +107,7 @@
 </div>
 
 <div class="row">
-    <div class="col-xs-12 col-sm half-bg" style="background-image: url('/assets/images/mountain-river.jpg'); background-position: center;"></div>
+    <div class="col-xs-12 col-sm half-bg" style="background-image: url('/sober-living/images/sober_living_0621.jpg'); background-position: center;"></div>
     <div class="col-xs-12 col-sm">
         <div class="wrap">
             <div class="row">
@@ -115,18 +115,19 @@
                     <h2>Our Sober Living Center</h2>
                     <p>Those struggling with alcohol addiction often spend a great deal of time drinking alcohol in their home environments.</p>
                     <p>For those considering engaging in treatment while continuing to live at home, this poses significant challenges for maintaining sobriety. Our sober living facilities emphasize our belief that active connection to community is a foundational aspect of long-term recovery. As such, clients in our sober living are encouraged to take on mentoring roles with new peers, as well as to begin involvement in community-based recovery programs such as 12-step and SMART Recovery.</p>
+                    <p>Click learn more below, and get a virtual tour of our Sober Living center.</p>
                 </div>
             </div>
-            <div class="gallery row">
+            <!-- <div class="gallery row">
                 <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0607.jpg" alt="Sober living house interior 1"></div>
                 <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0608.jpg" alt="Sober living house interior 2"></div>
                 <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0621.jpg" alt="Sober living house interior 3"></div>
                 <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0626.jpg" alt="Sober living house interior 4"></div>
                 <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0633.jpg" alt="Sober living house interior 5"></div>
                 <div class="item col-xs-12 col-sm-6 col-md-4"><img src="/sober-living/images/sober_living_0631.jpg" alt="Sober living house interior 6"></div>
-            </div>
+            </div> -->
             <div class="row">
-                <a class="button border" href="/sober-living">Sober Living</a>
+                <a class="button border" href="/sober-living">Learn More - Sober Living</a>
                 <a class="button yellow" href="tel:303-578-4536">Call Now: 303-578-4536</a>
             </div>
         </div>
@@ -137,10 +138,10 @@
     <!-- { "partial": "../src/partials/call-to-action-faq.p.html" } -->
 </div>
 
-<script src="/assets/gallery.min.js" defer></script>
+<!-- <script src="/assets/gallery.min.js" defer></script>
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         var gallery = document.querySelector('.gallery');
         window.erbium.gallery.create({ target: gallery });
     });
-</script>
+</script> -->
