landing page clean up and build

--- a/landing/cocaine-landing/index.v.html
+++ b/landing/cocaine-landing/index.v.html
@@ -9,7 +9,6 @@
     .main {
         background-image: url('/cocaine-landing/flatirons-hill.jpg');
     }
-
     .ps {
         font-size: 1rem;
         line-height: 1.6rem;
@@ -17,7 +16,6 @@
         padding: 0.5rem;
         font-weight: 500;
     }
-
     .button {
         margin: 0.5rem;
     }
@@ -27,7 +25,7 @@
     <div class="gradient">
         <div>
             <h1>COCAINE ADDICTION RECOVERY</h1>
-            <h2>get help with alcohol addiction treatment today</h2>
+            <h2>get help with cocaine addiction treatment today</h2>
         </div>
     </div>
 </div>
@@ -37,18 +35,10 @@
         <div class="wrap">
             <div class="row">
                 <div class="col-xs-12">
-                    Cocaine Addiction
-                    The 2018 National Survey on Drug Use and Health reports that in the past year approximately 5.5 million people in the
-                    United States used cocaine, including approximately 750,000 users of crack cocaine. This same study found that “3.5
-                    million adults aged 26 or older used cocaine in the past year, including 666,000 who used crack.” The percentage of
-                    adults in this age group in 2018 who used cocaine in the past year was higher than the percentages in most years from
-                    2011 to 2015, but it was similar to the percentages in 2016 and 2017. The estimate of past year crack use in 2018 among
-                    adults aged 26 or older was lower than estimates in 2002 to 2008, but it was similar to the estimates in 2009 to 2017.”
-                    
-                    This same study found that about 977,000 people aged 12 or older in 2018 met clinical criteria for a diagnosis of
-                    Cocaine Use Disorder in the past year, equating to approximately 0.4 percent of the population of the United States. The
-                    study also determined that this percentage of people was relatively consistent with percentages found in studies from
-                    2009 to 2017, but lower than the percentages from 2002 to 2008.
+                    <h2>Cocaine Addiction Treatment at Flatirons Recovery</h2>
+                    <p>Those wishing to engage in treatment for Cocaine Use Disorder at Flatirons Recovery will typically engage in a medical detoxification program for a clinically determined period of 2-7 days to ensure that a client is medically stable.</p>
+                    <p>Post-detox, treatment for Cocaine Use Disorder at Flatirons Recovery typically begins in our <a href="/treatment/php/">PHP/Day Treatment</a> program for a period of at least 4 weeks, the details of which can be found here.</p>
+                    <p>From there, clients often step-down into our <a href="/treatment/iop/">IOP</a> for a period of 4-12 weeks, while continuing to work with their therapeutic team on a plan to address support needs that will be crucial to maintaining recovery after structured treatment ends.</p>
 
                     <h3>Learn More</h3>
                 </div>
@@ -56,8 +46,8 @@
             <div class="row">
                 <div class="col-xs">
                     <a class="button blue" href="/treatment/modalities">Therapy Program</a>
-                    <a class="button green" href="/blog/mindfulness-exercises-to-support-early-addiction-recovery">mindfulness training</a>
-                    <a class="button black" href="/addiction/alcohol">Alcohol Addiction</a>
+                    <a class="button green" href="/mindfulness">mindfulness training</a>
+                    <a class="button black" href="/addiction/cocaine">Cocaine Addiction</a>
                 </div>
             </div>
         </div>
@@ -123,7 +113,7 @@
             <div class="row">
                 <div class="col-xs">
                     <h2>Our Sober Living Center</h2>
-                    <p>Those struggling with alcohol addiction often spend a great deal of time drinking alcohol in their home environments.</p>
+                    <p>Those struggling with cocaine addiction often spend a great deal of time usingn drugs in their home environments.</p>
                     <p>For those considering engaging in treatment while continuing to live at home, this poses significant challenges for maintaining sobriety. Our sober living facilities emphasize our belief that active connection to community is a foundational aspect of long-term recovery. As such, clients in our sober living are encouraged to take on mentoring roles with new peers, as well as to begin involvement in community-based recovery programs such as 12-step and SMART Recovery.</p>
                     <p>Click learn more below, and get a virtual tour of our Sober Living center.</p>
                 </div>
@@ -132,6 +122,24 @@
                 <a class="button border" href="/sober-living">Learn More - Sober Living</a>
                 <a class="button yellow" href="tel:303-578-4536">Call Now: 303-578-4536</a>
             </div>
+        </div>
+    </div>
+</div>
+
+<div class="wrap">
+    <hr>
+    <h3>More From the Blog</h3>
+
+    <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4">
+            <img src="/blog/images/cocaineandanxiety-thumb.jpg" alt="">
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-8">
+            <h4>Cocaine and Anxiety: Can cocaine cause an anxiety disorder?</h4>
+            <p>Unfortunately, cocaine use is most likely going to make a person’s anxiety worse in the long run, and may
+                even bring about clinical anxiety for someone who has not previously struggled with anxiety in the past.
+            </p>
+            <a class="button blue" href="/blog/can-cocaine-cause-anxiety-disorder">Read More</a>
         </div>
     </div>
 </div>
