replace single quotes with html code

--- a/src/sober-living/index.v.html
+++ b/src/sober-living/index.v.html
@@ -1,6 +1,6 @@
 <!-- {
     "title": "Colorado Sober Living | Flatirons Recovery",
-    "description": "Flatirons Recovery offers a comfortable, structured, gender-specific Sober Living environment for it's clients. See the details.",
+    "description": "Flatirons Recovery offers a comfortable, structured, gender-specific Sober Living environment for it&apos;s clients. See the details.",
     "keywords": "prescription drug addiction, substance abuse, colorado prescription drug addiction",
     "ogImage": "/sober-living/rockies.jpg"
 } -->
