--- a/src/index.v.html
+++ b/src/index.v.html
@@ -36,6 +36,10 @@
             </div>
         </div>
     </div>
+    <div class="banner" hidden>
+        <button class="blue close">X</button>
+        <a href="/covid-19">Learn how Flatirons is handling COVID-19.</a>
+    </div>
 </div>
 
 <div class="row">
