payer source dropdown #57

--- a/src/admission/index.v.html
+++ b/src/admission/index.v.html
@@ -60,8 +60,10 @@
 
 <div class="wrap" id="verify-insurance">
     <h2>Verify Insurance</h2>
-    <h4>Complete form below to verify insurance benefits.</h4>
-    <form>
+    <h4>Complete form below to verify insurance benefits. A member on our admissions team will be in touch to follow up.</h4>
+        <!-- { "partial": "/partials/message-us.p.html" } -->
+
+    <!-- <form>
         <field>
             <legend>Contact</legend>
             <div class="row">
@@ -222,5 +224,5 @@
     <p>
         <em>All information submitted to us is completely confidential. See our <a href="/confidentiality">HIPPA
                 Confidentiality Policy</a>.</em>
-    </p>
+    </p> -->
 </div>
