--- a/src/index.v.html
+++ b/src/index.v.html
@@ -150,50 +150,15 @@
     </div>
 </div>
 
-<div class="wrap" id="message">
-    <form class="row">
-        <div class="col-xs-12">
-            <!-- { "partial": "/partials/message-us.p.html" } -->
-        </div>
-        <div class="col-xs-12 col-sm-6">
-            <label for="firstName">first name</label>
-            <input type="text" name="firstName" required>
-        </div>
-        <div class="col-xs-12 col-sm-6">
-            <label for="lastName">last name</label>
-            <input type="text" name="lastName" required>
-        </div>
-        <div class="col-xs-12 col-sm-4">
-            <label for="email">email</label>
-            <input type="text" name="email">
-        </div>
-        <div class="col-xs-12 col-sm-4">
-            <label for="phone">phone</label>
-            <input type="text" name="phone" required>
-        </div>
-        <div class="col-xs-12 col-sm-4">
-            <label for="referral">how'd you hear about us</label>
-            <select name="referral">
-                <option value="none" selected disabled>none</option>
-                <option value="social media">social media</option>
-                <option value="doctor/therapist">doctor/therapist</option>
-                <option value="hospital system">hospital system</option>
-                <option value="search engine">search engine</option>
-                <option value="advertisement">advertisement</option>
-                <option value="other">other</option>
-            </select>
-        </div>
-        <div class="col-xs-12">
-            <label for="message">message</label>
-            <textarea name="message" required></textarea>
-        </div>
-        <div class="col-xs-12">
-            <input class="button blue" type="submit" value="Submit">
-        </div>
-    </form>
-    <p><em>All information submitted to us is completely confidential. See our <a href="/confidentiality">HIPPA Confidentiality Policy</a>.</em></p>
+<div class="wrap">
+    <h2>Message Us</h2>
+    <p>To begin your healing journey from addiction simply fill out the form below, or call us at <a
+            href="tel:303-578-4536">303-578-4536</a>.</p>
+    <p>A member of our Admissions Team will reply to you as soon as possible to start the process, and to answer any
+        questions that you may have about our treatment program.</p>
+    <!-- { "partial": "/partials/message-us.p.html" } -->
 </div>
-
+        
 <script type="text/javascript">
     var close = document.querySelector('#close');
     var player = document.querySelector('#player');
