dynamic recent blog #47

--- a/src/addiction/heroin/index.v.html
+++ b/src/addiction/heroin/index.v.html
@@ -54,18 +54,5 @@
     <p>From there, clients often step-down into our IOP for a period of 4-12 weeks, while continuing to work with their therapeutic team on a plan to address support needs that will be crucial to maintaining recovery after structured treatment ends.</p>
 </div>
 
-<div class="wrap">
-    <hr>
-    <h3>More From the Blog</h3>
-
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <img src="/blog/images/heroin-thumb.jpg" alt="">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-8">
-            <h4>What Does Treatment for Heroin Look Like?</h4>
-            <p>Heroin is a narcotic in the opiate family that originates from morphine. Heroin is an illicit drug that is sold in a white, brown, or black powder.</p>
-            <a class="button blue" href="/blog/what-does-treatment-for-heroin-look-like">Read More</a>
-        </div>
-    </div>
-</div>
+<div id="category" hidden>heroin</div>
+<!-- { "partial": "/partials/more-from-blog.p.html" } -->
