--- a/src/mindfulness/index.v.html
+++ b/src/mindfulness/index.v.html
@@ -34,41 +34,5 @@
     <!-- { "partial": "/partials/call-to-action-1.p.html" } -->
 </div>
 
-<div class="wrap">
-    <hr>
-    <h3>More From the Blog</h3>
-
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <img src="/blog/images/mindfulness2-thumb.jpg" alt="">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-8">
-            <h4>How Mindfulness and Meditation Help with Drug and Alcohol Cravings</h4>
-            <p>Mindfulness is a tool that has been scientifically proven to help lessen a wide array of mental health symptoms common
-            in early addiction recovery, including cravings to use drugs or alcohol.</p>
-            <a class="button blue" href="/blog/mindfulness-meditation-helps-with-cravings">Read More</a>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <img src="/blog/images/mentalillnessandmeditation-thumb.jpg" alt="">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-8">
-            <h4>Mental Illness and Meditation</h4>
-            <p>The skeptical scientist in me looked for tangible things to grasp, and I couldn’t see how mindfulness had anything to do with science...</p>
-            <a class="button blue" href="/blog/mental-illness-and-meditation">Read More</a>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <img src="/blog/images/thanksgiving1-thumb.jpg" alt="">
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-8">
-            <h4>A Mindfulness Exercise on Gratitude for Thanksgiving</h4>
-            <p>A mindfulness exercise on gratitude. Consider trying this practice by reading it aloud as you sit down to your Thanksgiving dinner.</p>
-            <a class="button blue" href="/blog/a-mindfulness-exercise-on-gratitude-for-thanksgiving">Read More</a>
-        </div>
-    </div>
-</div>
+<div id="category" hidden>mindfulness</div>
+<!-- { "partial": "/partials/more-from-blog.p.html" } -->
