--- a/src/addiction/methamphetamine/index.v.html
+++ b/src/addiction/methamphetamine/index.v.html
@@ -57,3 +57,6 @@
     <p>Post-detox, treatment for Methamphetamine Use Disorder at Flatirons Recovery typically begins in our PHP/Day Treatment program for a period of at least 4 weeks, the details of which can be found here.</p>
     <p>From there, clients often step-down into our IOP for a period of 4-12 weeks, while continuing to work with their therapeutic team on a plan to address support needs that will be crucial to maintaining recovery after structured treatment ends.</p>
 </div>
+
+<div id="category" hidden>methamphetamine</div>
+<!-- { "partial": "/partials/more-from-blog.p.html" } -->
