--- a/src/index.v.html
+++ b/src/index.v.html
@@ -120,6 +120,55 @@
     </div>
 </div>
 
+<div class="row wrap">
+    <h2>Featured Articles</h2>
+</div>
+
+<div class="row articles">
+    <div class="col-xs-12 col-md-4 col-lg-4">
+        <div class="card">
+            <a href="/blog/how-our-model-is-different">
+                <div style="background-image: url('/blog/images/howflatironsrecoverysmodel-thumb.jpg');"></div>
+                <div>
+                    <h3>How Flatirons Recovery’s Model is Different from Traditional Residential Care</h3>
+                    <p>Understanding the world of rehab and addiction treatment centers can sometimes be difficult.</p>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <div class="col-xs-12 col-md-4 col-lg-4">
+        <div class="card">
+            <a href="/blog/mindfulness-meditation-helps-with-cravings">
+                <div style="background-image: url('/blog/images/mindfulness2-thumb.jpg');"></div>
+                <div>
+                    <h3>How Mindfulness and Meditation Help with Drug and Alcohol Cravings</h3>
+                    <p>Mindfulness is a tool that has been scientifically proven to help lessen a wide array of mental
+                        health
+                        symptoms common in early addiction recovery, including cravings to use drugs or alcohol.</p>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <div class="col-xs-12 col-md-4 col-lg-4">
+        <div class="card">
+            <a href="/blog/why-are-healthy-boundaries-so-important-in-addiction-recovery">
+                <div style="background-image: url('/blog/images/healthyboundaries-thumb.jpg');"></div>
+                <div>
+                    <h3>Why are Healthy Boundaries so Important in Addiction Recovery?</h3>
+                    <p>Learning to set and maintain healthy boundaries is a common part of early addiction recovery, and
+                        a key in
+                        maintaining a healthy, thriving long-term sober life.</p>
+                </div>
+            </a>
+        </div>
+    </div>
+</div>
+
+<div class="row wrap center-xs">
+    <a class="button border" href="/blog">Read More</a>
+</div>
 <div class="green">
     <div class="wrap">
         <div class="row">
