removed covid banner, covid page in menu #61

--- a/src/index.v.html
+++ b/src/index.v.html
@@ -36,10 +36,10 @@
             </div>
         </div>
     </div>
-    <div class="banner" hidden>
+    <!-- <div class="banner" hidden>
         <button class="blue close">X</button>
         <a href="/covid-19">Learn how Flatirons is handling COVID-19.</a>
-    </div>
+    </div> -->
 </div>
 
 <div class="video">
@@ -119,7 +119,7 @@
         </div>
     </div>
 </div>
-
+<!-- 
 <div class="row wrap">
     <h2>Featured Articles</h2>
 </div>
@@ -164,7 +164,7 @@
             </a>
         </div>
     </div>
-</div>
+</div> -->
 
 <div class="row wrap center-xs">
     <a class="button border" href="/blog">Read More</a>
