removed mediation eventn

--- a/src/events/index.v.html
+++ b/src/events/index.v.html
@@ -81,7 +81,7 @@
     <div class="col-xs-12 col-sm half-bg first-xs last-sm" style="background-image: url('/events/hike.jpg'); background-position: left center;"></div>
 </div>
 
-<div class="row" id="mediation-for-recovery">
+<!-- <div class="row" id="mediation-for-recovery">
     <div class="col-xs-12 col-sm">
         <div class="wrap">
             <div class="row">
@@ -118,7 +118,7 @@
             </div>
         </div>
     </div>
-    <div class="col-xs-12 col-sm half-bg first-xs" style="background-image: url('/events/buddah.jpg'); background-position: center;"></div>
+    <div class="col-xs-12 col-sm half-bg first-xs" style="background-image: url('/events/buddah.jpg'); background-position: center;"></div> -->
 </div>
 
 <div class="muted">
